--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,7 @@ name: 'Deploy .NET MVC App'
 description: 'Deploy the .NET MVC application to a server'
 runs:
   using: 'composite'
+  shell: bash
   steps:
     - name: Checkout code
       uses: actions/checkout@v2
