--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,7 @@ runs:
       run: dotnet publish -c Release -o ./publish
 
     - name: Deploy to Server
-      uses: some-action-for-deployment
+      uses: pantaSanjesh/Portfolio@v1.0.0
       with:
      
         path: '/var/www/html'
