--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,7 @@ runs:
         dotnet-version: '8.0'
 
     - name: Build and Publish
+     shell: bash
       run: dotnet publish -c Release -o ./publish
       
     - name: Deploy to Server
